--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'Christmas stories'
 - !lcsh 'Short stories'
+- GITenberg
 tableOfContents: The wistful heart -- A gift neglected -- The making of a man -- Christmas
   Eve at Swamp's End.
 title: Christmas Eve at Swamp's End
